NN-3474 tests